2014-07-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_find_file): Call xstrdup on a string so we can
	free it later.

	* info/t/relative-reference.sh: New test.
	* info/t/Init-inter.inc (run_ginfo): Inform about program failure 
	on pipe.
	* info/t/Timeout-test.inc: Check for failure message.

2014-07-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (run_ginfo): New function to wrap call of
	program for interactive tests.
	* info/t/Timeout-test.inc: New file.
	* info/t/Cleanup.inc: Indicate test failure if program timed out.
	* info/t/adjust-anchors.sh, info/t/body-start.sh,
	info/t/end-of-line.sh, info/t/goto-quoted.sh, info/t/index.sh,
	info/t/index-long-nodeline.sh, info/t/menu-sequence.sh,
	info/t/search-after-tag.sh, info/t/split-file-menu.sh,
	info/t/split-index.sh, info/t/tab.sh: Use run_ginfo and
	Timout-test.inc.
	* info/t/index-apropos.sh: Remove --restore option from ginfo
	invocation.

2014-07-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_handle_pointer, info_select_reference): Return
	non-zero on success.
	(forward_move_node_structure, backward_move_node_structure):
	Don't use info_error_was_printed to detect errors.  Rely on
	info_handle_pointer to print an error message.
	(info_global_prev_node, info_global_next_node, info_visit_menu): Don't
	access info_error_was_printed.

	* info/echo-area.c (read_and_dispatch_in_echo_area): Don't clear
	info_error_was_printed as it is not used by any of the echo area
	functions.  Remove unnecessary cast.

2014-07-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (info_read_in_echo_area)
	(info_read_completing_internal): Call window_clear_echo_area after
	getting user input.
	* info/indices.c (do_info_index_search, info_index_apropos)
	(info_virtual_index)
	* info/m-x.c (read_function_name, set_screen_height)
	* info/nodemenu.c (select_visited_node)
	* info/session.c (info_menu_or_ref_item, info_menu_sequence)