@@ -3,3 +3,4 @@ D	print-node 	# Dump node to file
 #echo-area
 #var
 infopath-no-defaults=On
+automatic-footnotes=On
